Revert "Fix alignment of the default page objects in the structure pattern"

--- a/mockup/patterns/structure/less/pattern.structure.less
+++ b/mockup/patterns/structure/less/pattern.structure.less
@@ -259,8 +259,6 @@
     .itemRow.default-page .title > *:first-child:before{
         content: '*';
         color: red;
-        position: fixed;
-        text-indent: -4px;
     }
 
 }
